# Producer

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: architecture.md  data_model.md  graph_contexts.md  interaction_rules.md  node_types.md
docs/product/: product_vision.md  roadmap_v1.md
public/: figma-port-node-benchmark.html
src/: App.edge-connect.test.tsx  App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/migrations/: 0001_init.sql  0002_graph_contexts.sql  0003_media_index.sql  0004_relationships_and_attachments.sql
src-tauri/resources/templates/: ecommerce_ad_v1.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/domain/: mod.rs  pathing.rs  project.rs  storage.rs  template.rs
src-tauri/src/domain/media/: mod.rs
src-tauri/tests/: backend.rs
src/boot/: BootVisibilityBridge.tsx  fallback.test.tsx  runtime.ts
src/bridge/: contracts.ts  tauri.test.ts  tauri.ts
src/canvas/: CanvasNodeLayer.tsx  CanvasStage.test.tsx  CanvasStage.tsx  CanvasViewport.flow-props.test.tsx  CanvasViewport.test.tsx  CanvasViewport.tsx  ProducerCanvasNode.tsx  ProducerEdge.tsx  autoLayout.test.ts  autoLayout.ts  camera.test.ts  camera.ts  canvasEdges.test.ts  canvasEdges.ts  connectionQuickAdd.test.ts  connectionQuickAdd.ts  flowConnection.ts  flowNodes.ts  lod.test.ts  lod.ts  nodePresentation.ts  (+8 more)
(+33 files in other folders)
