[package]
name = "producer-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "producer_backend"
path = "src/lib.rs"

[[bin]]
name = "producer-backend"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri"]

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2.0.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.10.3", optional = true , features = [] }
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
